# pro_django

./: .flake8  .gitignore  Dockerfile  Makefile  Makefile.txt  README.md  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
core/: db.sqlite3  manage.py
core/core/utils/: misc.py  settings.py
core/core_tutorials/: asgi.py  settings.py  urls.py  wsgi.py
core/core_tutorials/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
core/core_tutorials/settings/templates/: settings.dev.py
core/genaral/: apps.py
core/genaral/utils/: cryptography.py  custom_collections.py  misc.py  pytest.py  types.py
local/: settings.dev.py
scripts/: entrypoint.sh  production_data.py
