[project]
name = "pro-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Titus ",email = "kiptootitus75@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "split-settings (>=1.0.0,<2.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "flake8 (>=7.1.2,<8.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "django-debug-toolbar (>=5.0.1,<6.0.0)",
    "django-storages (>=1.14.5,<2.0.0)",
    "daphne (>=4.1.2,<5.0.0)",
    "psycopg[binary] (>=3.2.5,<4.0.0)",
    "pynacl (>=1.5.0,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
